Exercise finished but app crashes when opening. Idk why.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".DetailActivity">
+        </activity>
+        <activity android:name=".SixthActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".FifthActivity">
+        </activity>
+        <activity android:name=".FourthActivity">
+        </activity>
+        <activity android:name=".ThirdActivity">
+        </activity>
+        <activity android:name=".FirstActivity">
+        </activity>
+        <activity android:name=".SecondActivity">
         </activity>
     </application>
 
